add webhook telegram slip check

--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   "license": "MIT",
   "dependencies": {
     "@fastify/cors": "^8.0.0",
+    "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "fastify": "^4.0.0",
     "googleapis": "^146.0.0",
-    "moment-timezone": "^0.5.47"
+    "jimp": "^0.22.6",
+    "moment-timezone": "^0.5.47",
+    "qrcode-reader": "^1.0.4"
   },
   "devDependencies": {
     "nodemon": "^2.0.0"
